# esp32s3_lvgl_lora

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: animimg001.c.B14A2112F1FADB72.idx  animimg002.c.B46D7F5A0FAF7CCD.idx  animimg003.c.5FDC5B90EF7E263B.idx  char_conversion.c.F3632036CD8CBD4A.idx  char_conversion.h.8E3BDC44BD49BFAF.idx  char_conversion_test_gbk.c.8CC497B04D83B876.idx  char_conversion_test_utf8.c.798A9A199423F53F.idx  char_urldecode.c.CF43ECEF7E4DE890.idx  char_urlencode.c.CE06CB72DB8A9ADF.idx  disp_driver.c.18F8DCE823C9351E.idx  disp_driver.h.647EBC82F5728DA6.idx  disp_spi.c.59ED2532A700D72C.idx  disp_spi.h.038F8261CF4A776E.idx  esp_lcd_backlight.c.D316AA003B6C1D1E.idx  esp_lcd_backlight.h.374DBCEF19702730.idx  gifdec.c.07384ADA98EAD751.idx  (+600 more)
components/BSP/: CMakeLists.txt
components/BSP/LED/: led.c  led.h
components/BSP/USART/: mqtt.c  mqtt.h  usart.c  usart.h
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_porting/: CMakeLists.txt  lv_mount_cus_font.c  lv_mount_cus_font.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_task.c  lv_task.h
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
components/ui/fonts/: ui_font_Black28.c  ui_font_bold24.c
components/ui/images/: ui_img_humidity_png.c  ui_img_temperature_png.c  ui_img_wifi_1_png.c  ui_img_wifi_ic_png.c  ui_img_yituflow_png.c
components/ui/screens/: ui_Charts.c  ui_DataMenu.c  ui_MainScreen.c  ui_Other.c  ui_Wifi.c
main/: CMakeLists.txt  main.c
(+13 files in other folders)
